# ignis-web

./: .gitignore  OPTIMIZATION_PLAN.md  README.md  denoise.wgsl  display.wgsl  fsr.wgsl  gbuffer.wgsl  gpu-capabilities.json  gpu-profiles.json  index.html  oidn-conv2d.wgsl  oidn-ops.wgsl  oidn-pipeline.js  oidn-weights.js  pathtracer.wgsl  reblur.wgsl  renderer.js  restir_gi.wgsl  scene-loader.js  serve.py  shadow-map.wgsl  sharc.wgsl  sky-model.js  sky-nishita.js  temporal.wgsl  wavefront.wgsl  wf_accumulate.wgsl  wf_common.wgsl  wf_ray_gen.wgsl  wf_shade.wgsl  wf_trace.wgsl
.claude/: settings.local.json
native/: Cargo.toml
native/.cargo/: config.toml
native/src/: bvh.rs  gpu.rs  main.rs
scene/: scene.gltf
scene_fbx/: scene.gltf
tools/: export_fbx_to_gltf.py
