[package]
name = "ignis-native"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "25", features = ["vulkan-portability"] }
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
